# YieldGuard

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml  model_registry.json
dashboard/: app.py
data/demo/: machine_critical.csv  machine_healthy.csv  machine_warning.csv
models/: feature_engineer_20260618_152404.joblib  feature_engineer_20260619_142718.joblib  lightgbm_20260618_181658.joblib  lightgbm_20260619_153058.joblib
scripts/: export_model.py
src/yieldguard/data/: preprocessor.py  synthesizer.py
src/yieldguard/features/: engineer.py
src/yieldguard/models/: evaluator.py  trainer.py
src/yieldguard/serving/: api.py  drift.py  feature_buffer.py  schemas.py
src/yieldguard/utils/: cv.py  io.py
tests/: conftest.py  test_artifacts.py  test_cv.py  test_engineer.py  test_pipeline.py  test_preprocessor.py  test_synthesizer.py
web/: .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/about/: page.tsx
web/app/dashboard/: page.tsx
web/app/demo/: page.tsx
web/app/guide/: page.tsx
web/components/: Footer.tsx  Logo.tsx  Navbar.tsx
web/components/motion/: index.tsx
web/components/ui/: Badge.tsx  Button.tsx  Gauge.tsx  GaugeChart.tsx  GlassPanel.tsx  ResultPanel.tsx  RiskMeter.tsx  SensorChart.tsx  Stat.tsx  StatusBadge.tsx  Tabs.tsx  Tooltip.tsx
web/lib/demo-data/: index.ts
web/tests/: engine.test.ts
(+8 files in other folders)
